<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_bench_test"
        android:text="@string/bench_test"
        />
    <CheckBox
        android:layout_below="@+id/button_bench_test"
        android:text="@string/read_data_print_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/read_with_log"
        />


    <!--     write  -->
    <Button
        android:layout_below="@+id/read_with_log"
        android:id="@+id/button_write_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_share"
        />
    <Button
        android:layout_below="@id/button_write_share"
        android:id="@+id/button_write_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_all_db"
        />
    <Button
        android:layout_below="@+id/button_write_db"
        android:id="@+id/button_write_diskru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_all_diskru"
        />
    <Button
        android:layout_below="@+id/button_write_diskru"
        android:id="@+id/button_write_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_all_store_api"
        />
    <Button
        android:layout_below="@+id/button_write_store"
        android:id="@+id/button_write_lru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_all_lru"
        />

    <View
        android:layout_below="@+id/button_write_lru"
        android:id="@+id/divider0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/black06"/>


    <!--     read  -->
    <Button
        android:layout_below="@+id/divider0"
        android:id="@+id/button_read_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all_share"
        />
    <Button
        android:layout_below="@id/button_read_share"
        android:id="@+id/button_read_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all_db"
        />
    <Button
        android:layout_below="@+id/button_read_db"
        android:id="@+id/button_read_diskru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all_diskru"
        />

    <Button
        android:layout_below="@+id/button_read_diskru"
        android:id="@+id/button_read_store_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all_store_api"
        />
    <Button
        android:layout_below="@+id/button_read_store_api"
        android:id="@+id/button_read_lru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all_LRU"
        />

    <View
        android:layout_below="@+id/button_read_lru"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@color/black06"/>

    <Button
        android:layout_below="@+id/divider"
        android:id="@+id/button_read_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all"
        />

    <Button
        android:layout_below="@+id/button_read_all"
        android:id="@+id/button_write_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_all"
        />
</RelativeLayout>
</ScrollView>
